Add sharded skip-list memtable

--- a/test/conf/cassandra.yaml
+++ b/test/conf/cassandra.yaml
@@ -67,6 +67,15 @@ memtable:
         skiplist:
             inherits: default
             class_name: SkipListMemtable
+        skiplist_sharded:
+            class_name: ShardedSkipListMemtable
+            parameters:
+                serialize_writes: false
+                shards: 4
+        skiplist_sharded_locking:
+            inherits: skiplist_sharded
+            parameters:
+                serialize_writes: true
         skiplist_remapped:
             inherits: skiplist
         test_fullname:
