--- a/conf/cassandra.yaml
+++ b/conf/cassandra.yaml
@@ -298,6 +298,16 @@ partitioner: org.apache.cassandra.dht.Murmur3Partitioner
 # containing a CDC-enabled table if at space limit in cdc_raw_directory).
 cdc_enabled: false
 
+# Specify whether writes to the CDC-enabled tables should be blocked when CDC data on disk has reached to the limit.
+# When setting to false, the writes will not be blocked and the oldest CDC data on disk will be deleted to
+# ensure the size constraint. The default is true.
+# cdc_block_writes: true
+
+# Specify whether enable write path for CDC during internodes streaming.
+# When enabled, CDC data streamed to the destination node will be written into commit log first. When setting to false,
+# the CDC data will be written into SSTables just the same as normal streaming. The default is true.
+# write_path_for_cdc_enabled: true
+
 # CommitLogSegments are moved to this directory on flush if cdc_enabled: true and the
 # segment contains mutations for a CDC-enabled table. This should be placed on a
 # separate spindle than the data directories. If not set, the default directory is
