--- a/.circleci/config-2_1.yml
+++ b/.circleci/config-2_1.yml
@@ -234,8 +234,11 @@ j8_with_dtests_jobs: &j8_with_dtests_jobs
         requires:
           - start_utests_fqltool
           - j8_build
+    - start_utests_system_keyspace_directory:
+        type: approval
     - utests_system_keyspace_directory:
         requires:
+          - start_utests_system_keyspace_directory
           - j8_build
     - start_j8_dtest_jars_build:
         type: approval
